{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 269,
  "lineage": "3d8aa792-c149-4a40-aeef-3c1f303525af",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "influxdb_primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.87.143.70",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-07-24T23:10:07.118-07:00",
            "id": "projects/iot-platform-333007/regions/asia-southeast1/addresses/quangbs-ip-influxdb-primary",
            "name": "quangbs-ip-influxdb-primary",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "iot-platform-333007",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iot-platform-333007/regions/asia-southeast1/addresses/quangbs-ip-influxdb-primary",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/iot-platform-333007/zones/asia-southeast1-a/instances/quangbs-influxdb-primary"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "mqtt_primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.247.180.175",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-07-25T02:10:02.400-07:00",
            "id": "projects/iot-platform-333007/regions/asia-southeast1/addresses/quangbs-ip-mqtt-primary",
            "name": "quangbs-ip-mqtt-primary",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "iot-platform-333007",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iot-platform-333007/regions/asia-southeast1/addresses/quangbs-ip-mqtt-primary",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/iot-platform-333007/zones/asia-southeast1-a/instances/quangbs-mqtt-primary"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.143.214.231",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-07-05T02:23:43.817-07:00",
            "id": "projects/iot-platform-333007/regions/asia-southeast1/addresses/nat-demo",
            "name": "nat-demo",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "iot-platform-333007",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iot-platform-333007/regions/asia-southeast1/addresses/nat-demo",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/iot-platform-333007/regions/asia-southeast1/routers/router"
            ]
          },
          "dependencies": [
            "google_project_service.compute"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_node_exporter",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "9100"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-07-24T23:10:06.525-07:00",
            "deny": [],
            "description": "Creates firewall rule targeting tagged instances",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/iot-platform-333007/global/firewalls/quangbs-allow-node-exporter",
            "log_config": [],
            "name": "quangbs-allow-node-exporter",
            "network": "https://www.googleapis.com/compute/v1/projects/iot-platform-333007/global/networks/vpc-network-quangbs",
            "priority": 1000,
            "project": "iot-platform-333007",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iot-platform-333007/global/firewalls/quangbs-allow-node-exporter",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "quangbs-allow-node-exporter"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-07-04T22:54:23.422-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/iot-platform-333007/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/iot-platform-333007/global/networks/vpc-network-quangbs",
            "priority": 1000,
            "project": "iot-platform-333007",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iot-platform-333007/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "8080",
                  "1000-2000"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-07-04T21:55:41.917-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/iot-platform-333007/global/firewalls/firewall-demo-monitoring",
            "log_config": [],
            "name": "firewall-demo-monitoring",
            "network": "https://www.googleapis.com/compute/v1/projects/iot-platform-333007/global/networks/vpc-network-quangbs",
            "priority": 1000,
            "project": "iot-platform-333007",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iot-platform-333007/global/firewalls/firewall-demo-monitoring",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "web"
            ],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "influxdb_primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230711",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/iot-platform-333007/zones/asia-southeast1-a/disks/quangbs-influxdb-primary"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/iot-platform-333007/zones/asia-southeast1-a/instances/quangbs-influxdb-primary",
            "instance_id": "2275728265024035183",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata_fingerprint": "K7uLY3_nWLE=",
            "metadata_startup_script": "!/bin/bash\necho \"Starting to install Docker\"\nsudo apt-get remove docker docker-engine docker.io containerd runc\nsudo apt-get update\nsudo apt-get install -y \\\n    ca-certificates \\\n    curl \\\n    gnupg \\\n    lsb-release\nsudo mkdir -p /etc/apt/keyrings\ncurl -fsSL https://download.docker.com/linux/debian/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg\necho \\\n  \"deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/doc [...]
            "name": "quangbs-influxdb-primary",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.87.143.70",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/iot-platform-333007/global/networks/vpc-network-quangbs",
                "network_ip": "10.1.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/iot-platform-333007/regions/asia-southeast1/subnetworks/subnet-public",
                "subnetwork_project": "iot-platform-333007"
              }
            ],
            "project": "iot-platform-333007",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/iot-platform-333007/zones/asia-southeast1-a/instances/quangbs-influxdb-primary",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "quangbs-allow-node-exporter"
            ],
            "tags_fingerprint": "NXEa09Vgs18=",
            "zone": "asia-southeast1-a"
          },
          "dependencies": [
            "google_compute_address.influxdb_primary",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "mqtt_primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230711",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/iot-platform-333007/zones/asia-southeast1-a/disks/quangbs-mqtt-primary"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/iot-platform-333007/zones/asia-southeast1-a/instances/quangbs-mqtt-primary",
            "instance_id": "4429030824910925720",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata_fingerprint": "IhfHAKaEeuo=",
            "metadata_startup_script": "#!/bin/bash\necho \"Starting to install VerneMQ\"\ncurl -L https://github.com/vernemq/vernemq/releases/download/1.12.2/vernemq-1.12.2.bullseye.x86_64.deb -o vernemq-1.12.2.bullseye.x86_64.deb\ndpkg -i vernemq-1.12.2.bullseye.x86_64.deb\napt-get install -f -y\ncat \u003c\u003cEOT \u003e\u003e /etc/vernemq/vernemq.conf\naccept_eula = yes\nlistener.tcp.default = 0.0.0.0:1883\nallow_anonymous = on\nEOT\nsystemctl start vernemq\nsystemctl enable vernemq\necho \ [...]
            "name": "quangbs-mqtt-primary",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.247.180.175",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/iot-platform-333007/global/networks/vpc-network-quangbs",
                "network_ip": "10.1.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/iot-platform-333007/regions/asia-southeast1/subnetworks/subnet-public",
                "subnetwork_project": "iot-platform-333007"
              }
            ],
            "project": "iot-platform-333007",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/iot-platform-333007/zones/asia-southeast1-a/instances/quangbs-mqtt-primary",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "quangbs-allow-node-exporter"
            ],
            "tags_fingerprint": "NXEa09Vgs18=",
            "zone": "asia-southeast1-a"
          },
          "dependencies": [
            "google_compute_address.mqtt_primary",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/iot-platform-333007/global/networks/vpc-network-quangbs",
            "mtu": 1460,
            "name": "vpc-network-quangbs",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "iot-platform-333007",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iot-platform-333007/global/networks/vpc-network-quangbs"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-07-04T23:16:49.419-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/iot-platform-333007/regions/asia-southeast1/routers/router",
            "name": "router",
            "network": "https://www.googleapis.com/compute/v1/projects/iot-platform-333007/global/networks/vpc-network-quangbs",
            "project": "iot-platform-333007",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iot-platform-333007/regions/asia-southeast1/routers/router"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "iot-platform-333007/asia-southeast1/router/my-router-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "my-router-nat",
            "nat_ip_allocate_option": "MANUAL_ONLY",
            "nat_ips": [
              "https://www.googleapis.com/compute/v1/projects/iot-platform-333007/regions/asia-southeast1/addresses/nat-demo"
            ],
            "project": "iot-platform-333007",
            "region": "asia-southeast1",
            "router": "router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/iot-platform-333007/regions/asia-southeast1/subnetworks/private",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_address.nat",
            "google_compute_network.vpc_network",
            "google_compute_router.router",
            "google_compute_subnetwork.private",
            "google_project_service.compute"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-07-04T22:54:23.626-07:00",
            "gateway_address": "10.2.0.1",
            "id": "projects/iot-platform-333007/regions/asia-southeast1/subnetworks/private",
            "ip_cidr_range": "10.2.0.0/16",
            "name": "private",
            "network": "https://www.googleapis.com/compute/v1/projects/iot-platform-333007/global/networks/vpc-network-quangbs",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "iot-platform-333007",
            "purpose": "PRIVATE",
            "region": "asia-southeast1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.48.0.0/14",
                "range_name": "k8s-pod-range"
              },
              {
                "ip_cidr_range": "10.52.0.0/24",
                "range_name": "k8s-service-range"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/iot-platform-333007/regions/asia-southeast1/subnetworks/private",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-07-04T22:54:25.014-07:00",
            "gateway_address": "10.1.0.1",
            "id": "projects/iot-platform-333007/regions/asia-southeast1/subnetworks/subnet-public",
            "ip_cidr_range": "10.1.0.0/18",
            "name": "subnet-public",
            "network": "https://www.googleapis.com/compute/v1/projects/iot-platform-333007/global/networks/vpc-network-quangbs",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "iot-platform-333007",
            "purpose": "PRIVATE",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iot-platform-333007/regions/asia-southeast1/subnetworks/subnet-public",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "iot",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "iot",
            "metadata": [
              {
                "generation": 0,
                "name": "iot",
                "resource_version": "86716",
                "uid": "2479261d-ad26-4b72-abdd-6ca44503031f"
              }
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "monitoring",
            "metadata": [
              {
                "generation": 0,
                "name": "monitoring",
                "resource_version": "41479",
                "uid": "1af6270d-efa7-4d36-b5d8-a3f10c7e2ab3"
              }
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "alertmanager",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "id": "monitoring/alertmanager",
            "metadata": [
              {
                "annotations": {
                  "prometheus.io/port": "9093",
                  "prometheus.io/scrape": "true"
                },
                "generation": 0,
                "name": "alertmanager",
                "namespace": "monitoring",
                "resource_version": "11451735",
                "uid": "a8ab66a2-c685-4f4c-808b-64312e0e049f"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.52.0.110",
                "cluster_ips": [
                  "10.52.0.110"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 9093,
                    "protocol": "TCP",
                    "target_port": "9093"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "alertmanager"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_namespace.monitoring"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "iot/gateway",
            "metadata": [
              {
                "generation": 0,
                "name": "gateway",
                "namespace": "iot",
                "resource_version": "105416",
                "uid": "a3dcd167-c4b0-4627-bab9-56cd6cc1d89b"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.52.0.185",
                "cluster_ips": [
                  "10.52.0.185"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 31080,
                    "port": 8080,
                    "protocol": "TCP",
                    "target_port": "8080"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "gateway"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "grafana",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "monitoring/grafana",
            "metadata": [
              {
                "annotations": {
                  "prometheus.io/port": "3000",
                  "prometheus.io/scrape": "true"
                },
                "generation": 0,
                "name": "grafana",
                "namespace": "monitoring",
                "resource_version": "11452096",
                "uid": "22f91b9a-44c6-4cb3-90c4-b168a31c9482"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.52.0.50",
                "cluster_ips": [
                  "10.52.0.50"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 32000,
                    "port": 3000,
                    "protocol": "TCP",
                    "target_port": "3000"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "grafana"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "ip": "35.186.146.147"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "jhipster_registry",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "iot/jhipster-registry",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "jhipster-registry"
                },
                "name": "jhipster-registry",
                "namespace": "iot",
                "resource_version": "97448",
                "uid": "051dcf8a-01bb-49a2-88d9-11452d54827e"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "None",
                "cluster_ips": [
                  "None"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 0,
                    "port": 8761,
                    "protocol": "TCP",
                    "target_port": "8761"
                  }
                ],
                "publish_not_ready_addresses": true,
                "selector": {
                  "app": "jhipster-registry"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_namespace.iot"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "kube_state_metrics",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "kube-system/kube-state-metrics",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app.kubernetes.io/name": "kube-state-metrics",
                  "app.kubernetes.io/version": "2.3.0"
                },
                "name": "kube-state-metrics",
                "namespace": "kube-system",
                "resource_version": "13999269",
                "uid": "062b4408-37ae-4733-ba20-20e75b82d4f9"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "None",
                "cluster_ips": [
                  "None"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "metrics",
                    "node_port": 0,
                    "port": 8080,
                    "protocol": "TCP",
                    "target_port": "metrics"
                  },
                  {
                    "name": "metrics-self",
                    "node_port": 0,
                    "port": 8081,
                    "protocol": "TCP",
                    "target_port": "metrics-self"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/name": "kube-state-metrics"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "mysql_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "monitoring/mysql-dev",
            "metadata": [
              {
                "generation": 0,
                "name": "mysql-dev",
                "namespace": "monitoring",
                "resource_version": "668535",
                "uid": "2d851821-34a8-493d-b3ab-27b6871227c5"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.52.0.112",
                "cluster_ips": [
                  "10.52.0.112"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "mysqldevexporter",
                    "node_port": 0,
                    "port": 9104,
                    "protocol": "TCP",
                    "target_port": "9104"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "mysqldevexporter"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "node_exporter",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "id": "monitoring/node-exporter",
            "metadata": [
              {
                "annotations": {
                  "prometheus.io/port": "9100",
                  "prometheus.io/scrape": "true"
                },
                "generation": 0,
                "name": "node-exporter",
                "namespace": "monitoring",
                "resource_version": "54435",
                "uid": "0071f47d-f920-4e7d-bd1f-e6f8a14778db"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.52.0.49",
                "cluster_ips": [
                  "10.52.0.49"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "node-exporter",
                    "node_port": 0,
                    "port": 9100,
                    "protocol": "TCP",
                    "target_port": "9100"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/component": "exporter",
                  "app.kubernetes.io/name": "node-exporter"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "prometheus_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "id": "monitoring/prometheus-service",
            "metadata": [
              {
                "annotations": {
                  "prometheus.io/port": "9090",
                  "prometheus.io/scrape": "true"
                },
                "generation": 0,
                "name": "prometheus-service",
                "namespace": "monitoring",
                "resource_version": "54433",
                "uid": "2c647a68-5498-4d78-b636-6de7fe609213"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.52.0.65",
                "cluster_ips": [
                  "10.52.0.65"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 30000,
                    "port": 8080,
                    "protocol": "TCP",
                    "target_port": "9090"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "prometheus-server"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_namespace.monitoring"
          ]
        }
      ]
    }
  ]
}